[tool.poetry]
name = "tenzpytils"
version = "0.1.0"
description = "Just some Python3 utilities and convenience functions I find I need often e.g. bitwise manipulations, multiprocessing pools."
authors = ["Tenzin Chan <tenzinchan@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
